--- a/lab3/mine/src/templates/project.html
+++ b/lab3/mine/src/templates/project.html
@@ -3,9 +3,10 @@
     项目号 CHAR(5) PRIMARY KEY,
     项目名称 VARCHAR(256) NOT NULL,
     项目来源 VARCHAR(256) NOT NULL,
-    类型 INT CHECK (类型 IN (1, 2, 3, 4, 5)),
-    起始年份 DATE NOT NULL,
-    结束年份 DATE
+    项目类型 INT CHECK (项目类型 IN (1, 2, 3, 4, 5)),
+    总经费 FLOAT NOT NULL,
+    起始月份 DATE NOT NULL,
+    结束月份 DATE
 ); -->
 <html lang="en">
 <head>
@@ -15,24 +16,6 @@
 <title>教师教学科研登记系统</title>
 <link href="{{ url_for('static', filename='style1.css') }}" rel="stylesheet">
 <script>
-    function tableFilter() {
-      var input, filter, table, tr, td, i, txtValue;
-      input = document.getElementById("prependedInput");
-      filter = input.value.toUpperCase();
-      table = document.getElementById("bank-table");
-      tr = table.getElementsByTagName("tr");
-      for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[0];
-        if (td) {
-          txtValue = td.textContent || td.innerText;
-          if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            tr[i].style.display = "";
-          } else {
-            tr[i].style.display = "none";
-          }
-        }
-      }
-    }
     function openForm(key) {
       var form = document.getElementById("updateForm");
       form.style.display = "block";
@@ -52,12 +35,30 @@
       document.getElementById("deleteWarning").style.display = "none";
     } 
   </script>
+<!-- </script>
+<script type="text/javascript">
+	function checkSelectSet(e) {
+		var input = e.target,
+			list = input.getAttribute('list'),
+			options = document.querySelectorAll('#' + list + ' option[value="'+input.value+'"]'),
+			hiddenInput = document.getElementById(input.getAttribute('id').replace('-display', ''));
+
+		if (options.length > 0) {
+			  hiddenInput.value = input.value;
+			  input.value = options[0].innerText;
+		  }
+	}
+
+	function addDataListListener(eid) {
+		document.querySelector('#'+eid).addEventListener('input', checkSelectSet)
+	}
+</script> -->
 </head>
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
 <div class="form-popup" id="updateForm">
   <form class="form-container" name="update_form" method="POST">
-    <h1>更新表单</h1>
+    <h1>更新</h1>
     <div class="small text-muted">缺省值不变</div>
     <input type="hidden" name="key" value="">
     <input type="hidden" name="type" value="update">
@@ -67,12 +68,21 @@
     <input type="text" placeholder="项目名称" name="项目名称">
     <label for="email"><b>项目来源</b></label>
     <input type="text" placeholder="项目来源" name="项目来源">
-    <label for="email"><b>类型</b></label>
-    <input type="text" placeholder="类型" name="类型">
-    <label for="email"><b>起始年份</b></label>
-    <input type="text" placeholder="起始年份" name="起始年份">
-    <label for="email"><b>结束年份</b></label>
-    <input type="text" placeholder="结束年份" name="结束年份">
+    <label for="email"><b>项目类型</b></label>
+    <input type="text" placeholder="项目类型" name="项目类型" list="type_list">
+    <datalist id="type_list">
+      <option value="1">国家级项目</option>
+      <option value="2">省部级项目</option>
+      <option value="3">市厅级项目</option>
+      <option value="4">企业合作项目</option>
+      <option value="5">其它类型项目</option>
+    </datalist>
+    <label for="email"><b>总经费</b></label>
+    <input type="text" placeholder="总经费" name="总经费">
+    <label for="email"><b>起始月份</b></label>
+    <input type="text" placeholder="起始月份" name="起始月份">
+    <label for="email"><b>结束月份</b></label>
+    <input type="text" placeholder="结束月份" name="结束月份">
     <button type="submit" class="btn btn-success" value="Refresh Page" onclick="window.location.reload();">确认</button>
     <button type="button" class="btn bg-danger" onclick="closeForm()">取消</button>
   </form>
@@ -95,7 +105,7 @@
     <nav class="sidebar-nav">
       <ul class="nav">
         <li class="nav-title">教师教学科研登记系统</li>
-        <a class="nav-link" href="index"> <i class="nav-icon icon-speedometer"></i> 首页 </a>
+        <!-- <a class="nav-link" href="index"> <i class="nav-icon icon-speedometer"></i> 首页 </a> -->
         <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="teacher"> <i class="nav-icon icon-puzzle"></i> 教师</a> </li>
         <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="paper"> <i class="nav-icon icon-cursor"></i> 论文</a> </li>
         <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="course"> <i class="nav-icon icon-cursor"></i> 课程</a> </li>
@@ -115,9 +125,17 @@
                   <input type="text" placeholder="项目号" name="项目号">
                   <input type="text" placeholder="项目名称" name="项目名称">
                   <input type="text" placeholder="项目来源" name="项目来源">
-                  <input type="text" placeholder="类型" name="类型">
-                  <input type="text" placeholder="起始年份" name="起始年份">
-                  <input type="text" placeholder="结束年份" name="结束年份">
+                  <input type="text" placeholder="项目类型" name="项目类型" list="type_list">
+                  <datalist id="type_list">
+                    <option value="1">国家级项目</option>
+                    <option value="2">省部级项目</option>
+                    <option value="3">市厅级项目</option>
+                    <option value="4">企业合作项目</option>
+                    <option value="5">其它类型项目</option>
+                  </datalist>
+                  <input type="text" placeholder="总经费" name="总经费">
+                  <input type="text" placeholder="起始月份" name="起始月份">
+                  <input type="text" placeholder="结束月份" name="结束月份">
                   <button class="btn btn-info" type="submit">查询</button>
                 </form>
           </div>
@@ -143,9 +161,10 @@
                     <td> {{ i.项目号 }} </td>
                     <td> {{ i.项目名称 }} </td>
                     <td> {{ i.项目来源 }} </td>
-                    <td> {{ i.类型 }} </td>
-                    <td> {{ i.起始年份 }} </td>
-                    <td> {{ i.结束年份 }} </td>
+                    <td> {{ i.项目类型 }} </td>
+                    <td> {{ i.总经费 }} </td>
+                    <td> {{ i.起始月份 }} </td>
+                    <td> {{ i.结束月份 }} </td>
                     <td><label class="btn btn-success" onclick="openForm(this.parentNode.parentNode.id)">更新</label>
                       <label class="btn bg-danger" onclick="openwForm(this.parentNode.parentNode.id)">删除</label></td>
                   </tr>
@@ -157,20 +176,74 @@
         </div>
         <div class="card">
           <div class="insert-container">
-            <h4 class="card-title mb-0">插入</h4>
+            <h4 class="card-title mb-0">新建</h4>
             <!-- <div class="small text-muted">请勿缺省</div> -->
             <form class="form-insert" method="POST">
               <input type="hidden" name="type" value="insert">
-              <input type="text" placeholder="项目号(Not Null)" name="项目号" required="">
-              <input type="text" placeholder="项目名称(Not Null)" name="项目名称" required="">
-              <input type="text" placeholder="项目来源(Not Null)" name="项目来源" required="">
-              <input type="text" placeholder="类型(Not Null)" name="类型" required="">
-              <input type="text" placeholder="起始年份(Not Null)" name="起始年份" required="">
-              <input type="text" placeholder="结束年份" name="结束年份">
-              <button class="btn btn-warning" type="submit">插入</button>
+              <input type="text" placeholder="项目号" name="项目号" required="">
+              <input type="text" placeholder="项目名称" name="项目名称" required="">
+              <input type="text" placeholder="项目来源" name="项目来源" required="">
+              <input type="text" placeholder="项目类型" name="项目类型" required="" list="type_list">
+              <datalist id="type_list">
+                <option value="1">国家级项目</option>
+                <option value="2">省部级项目</option>
+                <option value="3">市厅级项目</option>
+                <option value="4">企业合作项目</option>
+                <option value="5">其它类型项目</option>
+              </datalist>
+              <input type="text" placeholder="总经费" name="总经费" required="">
+              <input type="text" placeholder="起始月份" name="起始月份" required="">
+              <input type="text" placeholder="结束月份(可缺省)" name="结束月份">
+              <button class="btn btn-warning" type="submit">新建</button>
             </form>
           </div>
         </div>
+
+        <div class="card">
+          <div class="insert-container">
+                <h4 class="card-title mb-0">查询项目承担情况</h4>
+                <form class="form-insert" method="POST">
+                  <input type="hidden" name="type" value="query_1">
+                  <input type="text" placeholder="老师工号" name="工号">
+                  <input type="text" placeholder="项目号" name="项目号">
+                  <button class="btn btn-info" type="submit">查询</button>
+                </form>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-5">
+                <h4 class="card-title mb-0">项目承担</h4>
+              </div>
+            </div>
+            <div>             
+              <div>
+                <table id="bank-table">
+                  <tr> {% for i in labels1 %}
+                    <th> {{ i }} </th>
+                    {% endfor %}
+                    <th>操作</th>
+                  </tr>
+                  {% for i in content1 %}
+                  <tr id="{{ i.工号 }}">
+                    <td> {{ i.工号 }} </td>
+                    <td> {{ i.姓名 }} </td>
+                    <td> {{ i.项目号 }} </td>
+                    <td> {{ i.项目名称 }} </td>
+                    <td> {{ i.排名 }} </td>
+                    <td> {{ i.承担经费 }} </td>
+                    <td><label class="btn btn-success" onclick="openForm(this.parentNode.parentNode.id)">更新</label>
+                      <label class="btn bg-danger" onclick="openwForm(this.parentNode.parentNode.id)">删除</label></td>
+                  </tr>
+                  {% endfor %}
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </main>
