--- a/lab3/ref/src/templates/index.html
+++ b/lab3/ref/src/templates/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>教师教学科研登记系统</title>
+<title>银行业务管理系统</title>
 <style>
 .author1 {
     width: 190px;
@@ -35,13 +35,14 @@
 <div class="sidebar">
   <nav class="sidebar-nav">
     <ul class="nav">
-      <li class="nav-title">教师教学科研登记系统</li>
-      <!-- <a class="nav-link" href="index"> <i class="nav-icon icon-speedometer"></i> 首页 </a> -->
-      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="teacher"> <i class="nav-icon icon-puzzle"></i> 教师</a> </li>
-      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="paper"> <i class="nav-icon icon-cursor"></i> 论文</a> </li>
-      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="course"> <i class="nav-icon icon-cursor"></i> 课程</a> </li>
-      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="project"> <i class="nav-icon icon-star"></i> 项目</a> </li>
-      <!-- <li class="nav-item"> <a class="nav-link  nav-dropdown-toggle" href="statistics"> <i class="nav-icon icon-speedometer"></i> 业务统计 </a> </li> -->
+      <li class="nav-title">银行业务管理系统</li>
+      <a class="nav-link" href="index"> <i class="nav-icon icon-speedometer"></i> 首页 </a>
+      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="bank"> <i class="nav-icon icon-puzzle"></i> 支行管理</a> </li>
+      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="employee"> <i class="nav-icon icon-cursor"></i> 员工管理</a> </li>
+      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="client"> <i class="nav-icon icon-cursor"></i> 客户管理</a> </li>
+      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="account"> <i class="nav-icon icon-star"></i> 账户管理</a> </li>
+      <li class="nav-item nav-dropdown"> <a class="nav-link nav-dropdown-toggle" href="debt"> <i class="nav-icon icon-bell"></i> 贷款管理</a> </li>
+      <li class="nav-item"> <a class="nav-link  nav-dropdown-toggle" href="statistics"> <i class="nav-icon icon-speedometer"></i> 业务统计 </a> </li>
     </ul>
   </nav>
   <button class="sidebar-minimizer brand-minimizer" type="button"></button>
@@ -55,17 +56,17 @@
         <div class="row">
           <div class="col-sm-5 col-lg-6">
             <div class="clearfix">
-              <h1 class="pt-3" >教师教学科研登记系统</h1>
-              <!-- <span class="badge badge-danger">Version 1.0</span> -->
+              <h1 class="pt-3" >银行业务管理系统</h1>
+              <span class="badge badge-danger">Version 1.0</span>
               <p class="text-muted"></p>
             </div>
           </div>
-        <!-- </div>
+        </div>
         <div class="chart-wrapper" style="height:430px;margin-top:20px;"> </div>
         <div class="author1">
-          <p class="text-muted">来泽远</p>
-          <p class="text-muted" >lzy1522659928@mail.ustc.edu.cn</p>
-        </div> -->
+          <p class="text-muted">和泳毅 PB19010450</p>
+          <p class="text-muted" >vagabond@mail.ustc.edu.cn</p>
+        </div>
       </div>
     </div>
   </div>
